<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="onCategoryClicked"
        android:text="Categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="8dp"
        android:onClick="onPlanButtonClicked"
        android:text="Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view"

        />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/category_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_next_btn"
        android:layout_width="11dp"
        android:layout_height="34dp"
        android:text="Button"
        android:visibility="gone"
        tools:layout_editor_absoluteY="681dp"
        tools:ignore="MissingConstraints" />

    android:id="@+id/ShowList"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:text="Show List"
        android:onClick="OnShowListClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />


</androidx.constraintlayout.widget.ConstraintLayout>