...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity">


    <Button
        android:id="@+id/PlanDescriptionToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="10dp"
        android:text="Description Toggle"
        android:onClick="PlanDescriptionToggle"
        app:layout_constraintBottom_toTopOf="@+id/directions_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <ListView
...
